# daily-news-report

./: .env.example  .gitignore  Makefile  README.md  SPEC.md  docker-compose.multica.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: verify_migration.py
backend/src/daily_scheduler/: config.py  constants.py  database.py
backend/src/daily_scheduler/application/use_cases/: check_recommendations.py  debate_engine.py  deliver_translation.py  memory_injection.py  run_daily_pipeline.py  run_news_pipeline.py
backend/src/daily_scheduler/domain/entities/: agent.py  debate.py  memory_node.py  recommendation.py  report.py
backend/src/daily_scheduler/domain/ports/: agent_binding_repo.py  debate_bus.py  debate_repository.py  llm_provider.py  memory_store.py  multica.py  news_provider.py  report_repository.py  translator.py
backend/src/daily_scheduler/entrypoints/api/: app.py
backend/src/daily_scheduler/entrypoints/api/routes/: agents.py  debate.py  memory.py  multica.py  reports.py  settings.py  webhooks.py
backend/src/daily_scheduler/entrypoints/api/schemas/: report.py
backend/src/daily_scheduler/entrypoints/cli/: commands.py
backend/src/daily_scheduler/infrastructure/: dependencies.py
backend/src/daily_scheduler/templates/email/: daily_report.html
backend/src/daily_scheduler/templates/prompts/agents/: bear.j2  (+14 more)
backend/tests/: test_agent_binding_repo.py  test_agent_entity.py  test_agents_endpoint.py  test_analyst_node.py  test_bull_bear_nodes.py  test_check_recommendations.py  test_claude_code_provider.py  test_codex_provider.py  test_config.py  test_council_multica_integration.py  test_council_news_provider.py  test_council_report_provider.py  test_debate_bus.py  test_debate_engine_events.py  test_debate_entity.py  test_debate_models.py  test_debate_perf_budget.py  test_debate_repository.py  test_decision_nodes.py  test_deliver_translation.py  test_dependencies.py  test_domain.py  test_editor_publisher_nodes.py  test_fetch_market_data.py  test_graph_builder.py  test_json_tree_index.py  test_judge_node.py  test_llm_provider_port.py  test_llm_router.py  test_markdown_store.py  test_memory_endpoint.py  test_memory_injection.py  test_memory_models.py  test_memory_node.py  test_memory_store.py  test_memory_store_port.py  test_models.py  test_multica_http_client.py  test_multica_port_types.py  test_multica_squad_client.py  (+15 more)
backend/tests/fixtures/: judge_clear_consensus.json  judge_clear_dissent.json  judge_false_consensus.json
(+77 files in other folders)
