[project]
name = "daily-scheduler"
version = "0.1.0"
description = "AI-powered daily news & trading report system with self-improving retrospective"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "yfinance>=0.2.40",
    "jinja2>=3.1",
    "aiosmtplib>=3.0",
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "python-ulid>=3.0",
    "pyyaml>=6.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyrefly>=0.56",
    "pylint>=3.0",
]

[project.scripts]
daily-scheduler = "daily_scheduler.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_scheduler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint.main]
load-plugins = []
jobs = 0

[tool.pylint."messages control"]
disable = [
    "too-many-instance-attributes",   # dataclasses/Pydantic models need many fields
    "too-few-public-methods",         # ABC ports with single method are valid
    "duplicate-code",                 # DTOs and schemas intentionally mirror each other
    "import-outside-toplevel",        # intentional lazy imports in CLI/routes for startup perf
    "too-many-arguments",             # DI constructors naturally have many dependencies
    "too-many-positional-arguments",  # same as above
    "cyclic-import",                  # database.Base ↔ ORM models is intrinsic to declarative SQLAlchemy
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-locals = 25

[tool.pylint.typecheck]
generated-members = ["func.*"]

[tool.pyrefly]
project_includes = ["src/"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real external services (SMTP, yfinance, Claude CLI)",
    "slow: tests that take a long time to run",
]
